# Coffee_Guide

./: .gitignore  .pre-commit-config.yaml  1.txt  LICENSE  README.md  docker-compose.production.yml  docker-compose.yml  requirements.txt  setup.cfg
coffee_guide/: Dockerfile  manage.py  openapi-schema.yml  pyproject.toml  token.json
coffee_guide/api/: filters.py  paginations.py  permissions.py  urls.py  utils.py
coffee_guide/api/serializers/: cafe.py
coffee_guide/api/views/: cafe.py
coffee_guide/cafe/: admin.py  models.py
coffee_guide/cafe/management/commands/: import_data.py
coffee_guide/cafe/migrations/: 0001_initial.py
coffee_guide/coffee_guide/: asgi.py  settings.py  urls.py  wsgi.py
coffee_guide/data/: Coffee_guide.json  additionally.json  alternative.json  available.json  clean_address.json  drink.json  roaster.json  schedule.json
coffee_guide/templates/: auth.html
coffee_guide/tests/: tests.py
coffee_guide/users/: admin.py  backends.py  credentials_copy.json  gmail_utils.py  models.py  pipelines.py  serializers.py  user_managers.py  views.py
coffee_guide/users/data/: phone_data.json
coffee_guide/users/migrations/: 0001_initial.py
docs/: openapi-schema.yaml  redoc.html
frontend/: .eslintignore  .eslintrc.cjs  .prettierrc.json  Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/.storybook/: main.js  preview.js
frontend/src/: index.scss  main.jsx
frontend/src/store/: index.js
frontend/src/utils/: Api.js  Coffee_guide.json  card.jsx  cards.jsx  cardsArray.jsx  constants.jsx  favourites.jsx  testApi.js  yandex_map.scss
nginx/: nginx.conf
(+81 files in other folders)
